fixed horizontal scrollbar on hamburger menu at lower res

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,13 @@
 	text-align: center;
 }
 
+@media only screen and (min-width : 640px) {
+	.navbar-nav {
+	margin: 0;
+	padding: 7.5px 15px;
+}
+}
+
 /*#nav-toggle-state {
   display: none;
 }
